--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "prettier": {},
   "devDependencies": {
+    "@roxi/routify": "^2.18.5",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.44.0",
@@ -24,6 +26,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.5",
+    "gun": "^0.2020.1237",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
     "vite-plugin-svelte-svg": "^1.0.0"
