--- a/package.json
+++ b/package.json
@@ -1,38 +1,42 @@
 {
-  "name": "gt",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
-  },
-  "prettier": {},
-  "devDependencies": {
-    "@roxi/routify": "^2.18.5",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@tsconfig/svelte": "^2.0.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
-    "svelte-preprocess": "^4.9.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.5"
-  },
-  "dependencies": {
-    "@types/js-cookie": "^3.0.2",
-    "@types/uuid": "^8.3.4",
-    "autoprefixer": "^10.4.5",
-    "gun": "^0.2020.1237",
-    "js-cookie": "^3.0.1",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
-    "uuid": "^8.3.2",
-    "vite-plugin-svelte-svg": "^1.0.0"
-  }
+	"name": "gt-kit",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"prepare": "svelte-kit sync",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@typescript-eslint/parser": "^5.10.1",
+		"eslint": "^8.12.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^2.5.1",
+		"prettier-plugin-svelte": "^2.5.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.10.1",
+		"tslib": "^2.3.1",
+		"typescript": "~4.6.2"
+	},
+	"dependencies": {
+		"@types/js-cookie": "^3.0.2",
+		"@types/uuid": "^8.3.4",
+		"autoprefixer": "^10.4.5",
+		"gun": "^0.2020.1237",
+		"js-cookie": "^3.0.1",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^3.0.24",
+		"uuid": "^8.3.2"
+	},
+	"type": "module"
 }
