--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"typescript": "~4.6.2"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^1.0.0-next.51",
 		"@types/js-cookie": "^3.0.2",
 		"@types/uuid": "^8.3.4",
 		"autoprefixer": "^10.4.5",
