--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^5.10.1",
-		"@typescript-eslint/parser": "^5.10.1",
-		"eslint": "^8.12.0",
-		"eslint-config-prettier": "^8.3.0",
+		"@sveltejs/kit": "1.0.0-next.330",
+		"@typescript-eslint/eslint-plugin": "^5.23.0",
+		"@typescript-eslint/parser": "^5.23.0",
+		"eslint": "^8.15.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.5.1",
-		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.10.1",
-		"tslib": "^2.3.1",
-		"typescript": "~4.6.2"
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.48.0",
+		"svelte-check": "^2.7.1",
+		"svelte-preprocess": "^4.10.6",
+		"tslib": "^2.4.0",
+		"typescript": "~4.6.4"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^1.0.0-next.51",
 		"@types/js-cookie": "^3.0.2",
 		"@types/uuid": "^8.3.4",
-		"autoprefixer": "^10.4.5",
+		"autoprefixer": "^10.4.7",
 		"gun": "^0.2020.1237",
 		"js-cookie": "^3.0.1",
-		"postcss": "^8.4.12",
+		"postcss": "^8.4.13",
 		"tailwindcss": "^3.0.24",
 		"uuid": "^8.3.2"
 	},
