--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           key: ${{ secrets.ACTION_KEY }}
           script: |
             cd
-            git clone ${{ github.repository }}
+            git clone https://github.com/${{ github.repository }}
             cd goats-and-tigers
             pnpm install
             pnpm build
