--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,11 @@ jobs:
           script: |
             cd
             source ~/.bashrc
+            rm -r goats-and-tigers
             git clone https://github.com/${{ github.repository }}
             cd goats-and-tigers
-            pnpm install
-            pnpm build
-            pm2 stop all
-            pm2 start all
+            /root/.local/share/pnpm/pnpm install
+            /root/.local/share/pnpm/pnpm build
+            /root/.local/share/pnpm/pm2 stop all
+            /root/.local/share/pnpm/pm2 start all
             cd
