--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
           key: ${{ secrets.ACTION_KEY }}
           script: |
             cd
+            PATH=/root/.local/share/pnpm:/root/.nvm/versions/node/v18.1.0/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
             source ~/.bashrc
             sh ~/.bashrc
             rm -r goats-and-tigers
