--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"typescript": "~4.6.4"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.73",
 		"@sveltejs/adapter-vercel": "next",
 		"@types/js-cookie": "^3.0.2",
 		"@types/uuid": "^8.3.4",
