--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.73",
 		"@sveltejs/adapter-vercel": "next",
+		"@types/gun": "^0.9.3",
 		"@types/js-cookie": "^3.0.2",
 		"@types/uuid": "^8.3.4",
 		"autoprefixer": "^10.4.7",
