--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@types/js-cookie": "^3.0.2",
 		"@types/uuid": "^8.3.4",
 		"autoprefixer": "^10.4.7",
+		"chance": "^1.1.8",
 		"gun": "^0.2020.1237",
 		"js-cookie": "^3.0.1",
 		"postcss": "^8.4.13",
